# chacha20-poly1305-aead

./: Cargo.toml  README.md  search-index.js
chacha20_poly1305_aead/: enum.DecryptError.html  fn.decrypt.html  fn.encrypt.html  fn.encrypt_read.html  fn.selftest.html  index.html  sidebar-items.js
chacha20_poly1305_aead/aead/: enum.DecryptError.html  fn.decrypt.html  fn.encrypt.html  fn.encrypt_read.html  sidebar-items.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
src/: aead.rs  as_bytes.rs  chacha20.rs  clone_from_slice.rs  lib.rs  poly1305.rs  simd.rs  simdint.rs  simdop.rs  simdty.rs
src/chacha20_poly1305_aead/: aead.rs.html  as_bytes.rs.html  lib.rs.html
src/simd_opt/: mod.rs  u32x4.rs
